--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
+/* h1 */
+/* https://www.cufonfonts.com/font/lovely-yollandy */
+@font-face {
+  font-family: "LovelyYollandy";
+  font-style: normal;
+  font-weight: normal;
+  src: local("LovelyYollandy"),
+    url("./fonts/Lovely_Yollandy.otf") format("opentype");
+}
+
+/* p */
+/* https://fonts.google.com/specimen/Caveat */
+@font-face {
+  font-family: "Caveat";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Caveat"), url("./fonts/Caveat-Regular.ttf") format("truetype");
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  font-size: 12pt;
+  line-height: 1.4;
+
+  --color-focus: rgb(128, 0, 128);
+  --color-focus-middle: hsla(300, 100%, 25%, 0.3);
+  --color-focus-light: hsla(356, 87%, 94%, 0.8);
+  --color-red: rgb(223, 3, 3);
+  --color-gray: hsl(210, 9%, 48%);
+  --color-gray-heavy: hsl(207, 6%, 29%);
+  --color-gray-middle: hsl(210, 1%, 67%);
+  --color-gray-light: rgba(0, 0, 0, 0.1);
+  --color-white: #e6e6e6;
+  --color-white-light: hsla(0, 0%, 90%, 0.5);
+}
+
+/* container of sections */
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  flex-wrap: nowrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+/* title of setions */
+h1 {
+  line-height: 6rem;
+  font-family: "LovelyYollandy", sans-serif;
+  text-decoration: underline;
+  font-size: 3rem;
+  color: var(--color-red);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* h3 , the name in personal */
+h3,
+p,
+a {
+  padding: 1vw;
+  font-family: "Caveat", sans-serif;
+  font-size: 28px;
+  line-height: 2rem;
 }
+
+/* flex container of section */
+.section {
+  padding: 90px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .red {
+  font-size: 80px;
+} */
