--- a/src/components/Cover/Cover.css
+++ b/src/components/Cover/Cover.css
@@ -8,6 +8,10 @@
     url("../../fonts/SmokeAttack.ttf") format("truetype");
 }
 
+.videocontainer {
+  width: 100vw;
+}
+
 video {
   width: 100vw;
   height: 100vh;
@@ -21,8 +25,10 @@ video {
 /* to align slogan in middle */
 .header {
   position: relative;
+  width: 100%;
   height: 100vh;
   display: flex;
+  flex: 100%;
   justify-content: center;
   align-items: center;
 }
