--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -20,8 +20,7 @@
 }
 
 .column img {
-  /* margin: 0; */
-  /* padding: 2.5px 0; */
+  margin: 0;
   padding: 2.5px 0;
   width: 100%;
   height: calc((100%-30px) / 11 * 2);
